# edge-f25-ship-2-vasu-bansal

./: .editorconfig  .gitignore  .nvmrc  CONTRIBUTING.md  CORE_GUIDE.md  GUIDE.md  Makefile  RAMP_GUIDE.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: help_request.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: items.py  main.py
backend/edge_boot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_health.py  test_items.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: AddItem.tsx  ErrorBoundary.tsx  ItemList.tsx
frontend/src/lib/: api.ts
