[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-boot-backend"
version = "0.1.0"
description = "FastAPI backend for Edge Boot"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.1",
  "pydantic==2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.23.8",
  "httpx==0.27.0",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]


